Fix scrollbar

--- a/_sass/homeless-analysis.scss
+++ b/_sass/homeless-analysis.scss
@@ -262,7 +262,7 @@
 
   #table_container {
     position: relative;
-    overflow-y: auto;
+    overflow: scroll;
     height: 850px;
     width: 100%;
   }
@@ -879,7 +879,7 @@
   }
 
   #panel_3c {
-    overflow-x: scroll;
+    overflow-y: auto;
     padding: 0 5px 0 5px;
   }
 
